<resources>
    <string name="app_name">TEST1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Booking</string>
    <string name="title_notifications">Profile</string>
    <string name="button1">SWIMMNG\nPRELIMINARY ROUND\nWOMEN</string>
    <string name="text_home">Your Journey to the Olympics</string>
    <string name="button2">SWIMMNG\nPRELIMINARY ROUND\nMEN</string>
    <string name="button3">SWIMMNG\nMEDLEY\nWOMEN</string>
    <string name="i">Image</string>
    <string name="button4">CEREMONY\nOPENING CEREMONY\nALL</string>
    <string name="button5">ATHLETICS\nMARATHON FINAL\nMEN\'S</string>
    <string name="button6">SWIMMING\nPRELIMINARY\nINDIVIDUALS</string>
    <string name="button7">SWIMMING\nFREESTYLE/MEDLY FINAL\nINDIVIDUALS</string>
    <string name="button8">DIVING\nSPRINGBOARD SEMIFINAL\nINDIVIDUALS</string>
    <string name="button9">DIVING\n10M PLATFORM SEMIFINAL\nMEN\'S</string>
    <string name="button10">DIVING\nSYNCHRONIZED 3M SPRINGBOARD FINAL\nINDIVIDUALS</string>
    <string name="button11">WEIGHTLIFTING\n40 KG GROUP B\nWOMEN\'S</string>
    <string name="button12">WEIGHTLIFTING\n76 KG GROUP B\nWOMEN\'S</string>
    <string name="button13">WEIGHTLIFTING\n+109 KG GROUP B\nMEN\'S</string>
    <string name="button14">WEIGHTLIFTING\n+109 KG GROUP A AND VICTORY CEREMONY\nMEN\'S</string>
    <string name="todo">TODO</string>
    <string name="button15">BACK</string>
    <string name="text1">\nCeremony Opening Ceremony All \n\nVenue : Olympic Stadium\nDate : 24 / 7 / 20\nStart time : 20:00\nDuration : 3 hour\nBus travel time : 30 minute</string>
    <string name="text2">\nAthletics Marathon Final Men\'s \n\nVenue : Olympic Stadium\nDate : 8 / 8 / 20\nStart time : 19:00\nDuration : 3.20 hour\nBus travel time : 30 minute</string>
    <string name="text3">\nSwimming Preliminary Individuals \n\nVenue : Tokyo Aquatics Centre	\nDate : 26 / 7 / 20 \nStart time : 10:30\nDuration : 2 hour\nBus travel time : 45 minute</string>
    <string name="text4">\nSwimming Freestyle/Medly Final Individuals \n\nVenue : Tokyo Aquatics Centre\nDate : 2 / 8 / 20 \nStart time : 10:30\nDuration : 2 hour\nBus travel time : 45 minute</string>
    <string name="text5">\nDiving Springboard Semifinal Men \n\nVenue : Tokyo Aquatics Centre\nDate : 4 / 8 / 20\nStart time : 10:00\nDuration : 1.30 hour\nBus travel time : 45 minute</string>
    <string name="text6">\nDiving Synchronized 3m Springboard Final Individuals\n\nVenue : Tokyo Aquatics Centre\nDate : 26 / 07 / 20\nStart time : 15:00\nDuration : 1  hour\nBus travel time : 45 minute</string>
    <string name="text7">\nDiving 10m Platform Semifinal Men\'s \n\nVenue : Tokyo Aquatics Centre\nDate : 08 / 08 / 20\nStart time : 11:00\nDuration : 1.30 hour\nBus travel time : 45 minute</string>
    <string name="text8">\nWeightlifting 40 kg Group B Women\'s \n\nVenue : Tokyo International Forum\nDate : 25 / 07 / 20 \nStart time : 13:20\nDuration : 1.50 hour\nBus travel time : 23 minute</string>
    <string name="text9">\nWeightlifting 76 kg Group B Women\'s \n\nVenue : Tokyo International Forum\nDate : 02 / 08 / 20\nStart time : 13:50\nDuration : 2.10 hour\nBus travel time : 23 minute</string>
    <string name="text10">\nWeightlifting +109 kg Group B Men\'s\n\nVenue : Tokyo International Forum\nDate : 04 / 08 / 20\nStart time : 13:50\nDuration : 2.10 hour\nBus travel time : 23 minute</string>
    <string name="text11">\nWeightlifting +109 kg Group A and Victory Ceremony, Men\'s\n\nVenue : Tokyo International Forum\nDate : 05 / 08 / 20\nStart time : 14:50\nDuration : 2.10 hour\nBus travel time : 23 minute</string>
    <string name="bookingNow">BOOKING NOW</string>>
    <string name="B1">BUSES TO\nCEREMONY\nOPENING CEREMONY\nALL</string>>
    <string name="B2">BUSES TO\nATHLETICS\nMARATHON FINAL\nMEN\'S</string>>
    <string name="B3">BUSES TO\nSWIMMING\nPRELIMINARY\nINDIVIDUALS</string>>
    <string name="B4">BUSES TO\nSWIMMING\nFREESTYLE/MEDLY FINAL\nINDIVIDUALS</string>>
    <string name="B5">BUSES TO\nDIVING\nSPRINGBOARD SEMIFINAL\nINDIVIDUALS</string>>
    <string name="B6">BUSES TO\nDIVING\n10M PLATFORM SEMIFINAL\nMEN\'S</string>>
    <string name="B7">BUSES TO\nDIVING\nSYNCHRONIZED 3M SPRINGBOARD FINAL\nINDIVIDUALS</string>>
    <string name="B8">BUSES TO\nWEIGHTLIFTING\n40 KG GROUP B\nWOMEN\'S</string>>
    <string name="B9">BUSES TO\nWEIGHTLIFTING\n76 KG GROUP B\nWOMEN\'S</string>>
    <string name="B10">BUSES TO\nWEIGHTLIFTING\n+109 KG GROUP B\nMEN\'S</string>>
    <string name="B11">BUSES TO\nWEIGHTLIFTING\n+109 KG GROUP A AND VICTORY CEREMONY\nMEN\'S</string>>
    <string name="ceremony">ceremony</string>>
    <string name="swim">swim</string>>
    <string name="wieght">ceremony</string>>
    <string name="diving">ceremony</string>>
    <string name="run">ceremony</string>>
    <string name="Bus1">16:30 - 17:00\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus2">17:00 - 17:30\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus3">17:30 - 18:00\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus4">18:00 - 18:30\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus5">18:30 - 19:00\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus6">19:00 - 19:30\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus7">19:30 - 20:00\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus8">20:00 - 20:30\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus9">20:30 - 21:00\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus10">08:00 - 08:45\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus11">08:30 - 09:15\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus12">09:00 - 09:45\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus13">09:30 - 10:15\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus14">10:00 - 10:45\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus15">10:30 - 11:15\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus16">11:00 - 11:45\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus17">11:30 - 12:15\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus18">13:00 - 13:45\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus19">13:30 - 14:15\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus20">14:00 - 14:45\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus21">14:30 - 15:15\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus22">15:00 - 15:45\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus23">11:00 - 11:23\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus24">11:30 - 11:53\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus25">12:00 - 12:23\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus26">12:30 - 12:53\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus27">13:00 - 13:23\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus28">13:30 - 13:53\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus29">14:00 - 14:23\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus30">14:30 - 14:53\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus31">15:00 - 15:23\nTYPE A\n(  OUT OF 20 LEFT)</string>>
    <string name="Bus32">18:00 - 18:30 \nTYPE B\n(  OUT OF 10 LEFT)</string>>
    <string name="Bus33">19:00 - 19:30\nTYPE B\n(  OUT OF 10 LEFT)</string>>
    <string name="Bus34">20:00 - 20:30\nTYPE B\n(  OUT OF 10 LEFT)</string>>
    <string name="Bus35">20:30 - 21:00\nTYPE B\n(  OUT OF 10 LEFT)</string>>
    <string name="Back">BACK</string>>
    <string name="Chair">chair</string>>
    <string name="white">white</string>>
    <string name="SB1">white</string>>


</resources>
