<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.test1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.test1.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.test1.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_1"
        android:name="com.example.test1.ui.home.homeProgam.CEREMONY_OPENING_CEREMONY_ALL"
        android:label="CEREMONY_OPENING_CEREMONY_ALL"
        tools:layout="@layout/ceremony_opening_ceremony_all_olympic_stadium"
        />
    <fragment
        android:id="@+id/navigation_2"
        android:name="com.example.test1.ui.home.homeProgam.ATHLETICS_MARATHON_FINAL_MEN_S"
        android:label="@string/text2"
        tools:layout="@layout/athletics_marathon_final_men"
        />
    <fragment
        android:id="@+id/navigation_3"
        android:name="com.example.test1.ui.home.homeProgam.SWIMMING_PRELIMINARY_INDIVIDUALS"
        android:label="@string/text3"
        tools:layout="@layout/swimming_preliminary_individuals"
        />
    <fragment
        android:id="@+id/navigation_4"
        android:name="com.example.test1.ui.home.homeProgam.SWIMMING_FREESTYLE_MEDLY_FINAL_INDIVIDUALS"
        android:label="@string/text4"
        tools:layout="@layout/swimming_freestyle_medly_final_individuals"
        />
    <fragment
        android:id="@+id/navigation_5"
        android:name="com.example.test1.ui.home.homeProgam.DIVING_SPRINGBOARD_SEMIFINAL_INDIVIDUALS"
        android:label="@string/text5"
        tools:layout="@layout/diving_springboard_semifinal_men"
        />
    <fragment
        android:id="@+id/navigation_6"
        android:name="com.example.test1.ui.home.homeProgam.DIVING_SYNCHRONIZED_3M_SPRINGBOARD_FINAL_INDIVIDUALS"
        android:label="@string/text6"
        tools:layout="@layout/diving_synchronized_3m_springboard_final_individuals"
        />
    <fragment
        android:label="@string/text7"
        android:name="com.example.test1.ui.home.homeProgam.DIVING_10M_PLATFORM_SEMIFINAL_MEN_S"
        android:id="@+id/navigation_7"
        tools:layout="@layout/diving_10m_platform_semifinal_men_s"
        />
    <fragment
        android:id="@+id/navigation_8"
        android:name="com.example.test1.ui.home.homeProgam.WEIGHTLIFTING_40_KG_GROUP_B_WOMEN_S"
        android:label="@string/text8"
        tools:layout="@layout/weightlifting_40_kg_group_b_women_s"
        />
    <fragment
        android:id="@+id/navigation_9"
        android:name="com.example.test1.ui.home.homeProgam.WEIGHTLIFTING_76_KG_GROUP_B_WOMEN_S"
        android:label="@string/text9"
        tools:layout="@layout/weightlifting_76_kg_group_b_women_s"
        />
    <fragment
        android:id="@+id/navigation_10"
        android:name="com.example.test1.ui.home.homeProgam.WEIGHTLIFTING_109_KG_GROUP_B_MEN_S"
        android:label="@string/text10"
        tools:layout="@layout/weightlifting_109_kg_group_b_men_s"
        />
    <fragment
        android:id="@+id/navigation_11"
        android:name="com.example.test1.ui.home.homeProgam.WEIGHTLIFTING_109_KG_GROUP_B_MEN_S"
        android:label="@string/text11"
        tools:layout="@layout/weightlifting_109_kg_group_b_men_s"
        />
    <fragment
        android:id="@+id/bus1"
        android:name="com.example.test1.ui.home.BUS.BUS1"
        android:label="@string/B1"
        tools:layout="@layout/bus1"
        />
    <fragment
        android:id="@+id/bus2"
        android:name="com.example.test1.ui.home.BUS.BUS2"
        android:label="@string/B2"
        tools:layout="@layout/bus2"
        />
    <fragment
        android:id="@+id/bus3"
        android:name="com.example.test1.ui.home.BUS.BUS3"
        android:label="@string/B3"
        tools:layout="@layout/bus3"
        />
    <fragment
        android:id="@+id/bus4"
        android:name="com.example.test1.ui.home.BUS.BUS4"
        android:label="@string/B4"
        tools:layout="@layout/bus4"
        />
    <fragment
        android:id="@+id/bus5"
        android:name="com.example.test1.ui.home.BUS.BUS5"
        android:label="@string/B5"
        tools:layout="@layout/bus5"
        />
    <fragment
        android:name="com.example.test1.ui.home.BUS.BUS6"
        android:label="@string/B6"
        android:id="@+id/bus6"
        tools:layout="@layout/bus6"
        />

    <fragment
        android:id="@+id/bus7"
        android:name="com.example.test1.ui.home.BUS.BUS7"
        android:label="@string/B7"
        tools:layout="@layout/bus7"
        />
    <fragment
        android:id="@+id/bus8"
        android:name="com.example.test1.ui.home.BUS.BUS8"
        android:label="@string/B8"
        tools:layout="@layout/bus8"
        />
    <fragment
        android:id="@+id/bus9"
        android:name="com.example.test1.ui.home.BUS.BUS9"
        android:label="@string/B9"
        tools:layout="@layout/bus9"
        />
    <fragment
        android:id="@+id/bus10"
        android:name="com.example.test1.ui.home.BUS.BUS10"
        android:label="@string/B10"
        tools:layout="@layout/bus10"
        />
    <fragment
        android:id="@+id/bus11"
        android:name="com.example.test1.ui.home.BUS.BUS11"
        android:label="@string/B11"
        tools:layout="@layout/bus11"
        />
    <fragment
        android:id="@+id/SB1"
        android:name="com.example.test1.ui.home.SELECTBUS.SB1"
        android:label="@string/SB1"
        tools:layout="@layout/slb1"
        />
    <fragment
        android:id="@+id/SB2"
        android:name="com.example.test1.ui.home.SELECTBUS.SB2"
        android:label="@string/B3"
        tools:layout="@layout/slb2"
        />
    <fragment
        android:id="@+id/SB3"
        android:name="com.example.test1.ui.home.SELECTBUS.SB3"
        android:label="@string/B2"
        tools:layout="@layout/slb3"
        />



</navigation>
