<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="30dp"
        android:text="@string/text_home"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="410dp"
        android:layout_height="440dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/ceremony"
                    android:src="@drawable/outdoor_sport_field_track_014_512" />

                <Button
                    android:id="@+id/button04"
                    android:layout_width="300dp"
                    android:layout_height="fill_parent"
                    android:text="@string/button4"
                    tools:layout_editor_absoluteX="33dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/wieght"
                    android:src="@drawable/weight" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/button11"
                    tools:layout_editor_absoluteX="33dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/swim"
                    android:src="@drawable/swim" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/button6"
                    tools:layout_editor_absoluteX="33dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/swim"
                    android:src="@drawable/diving" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/button10"
                    tools:layout_editor_absoluteX="33dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/swim"
                    android:src="@drawable/swim" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/button7"
                    tools:layout_editor_absoluteX="33dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/wieght"
                    android:src="@drawable/weight" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/button12"
                    tools:layout_editor_absoluteX="33dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/swim"
                    android:src="@drawable/diving" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/button8"
                    tools:layout_editor_absoluteX="33dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/wieght"
                    android:src="@drawable/weight" />

                <Button
                    android:id="@+id/button13"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/button13"
                    tools:layout_editor_absoluteX="33dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/wieght"
                    android:src="@drawable/weight" />

                <Button
                    android:id="@+id/button14"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/button14"
                    tools:layout_editor_absoluteX="33dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/swim"
                    android:src="@drawable/diving" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/button9"
                    tools:layout_editor_absoluteX="33dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/run"
                    android:src="@drawable/run" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/button5"
                    tools:layout_editor_absoluteX="33dp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>