<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="410dp"
        android:layout_margin="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="410dp"
            android:layout_height="180dp"
            android:contentDescription="@string/swim"
            app:srcCompat="@drawable/dddddd" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text5"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button000"
            android:layout_width="440dp"
            android:layout_height="wrap_content"
            android:text="@string/bookingNow" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>